--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -15,16 +16,19 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>The head element contains information about the webpage.</li>
+          <li>HTML provides the framework of a webpage.</li>
           <li>The body represents the visible content shown to the user.</li>
           <li>HTML attributes define additional information about a specific element.</li>
-          <li>HTML elements provide the framework of a webpage.</li>
+          <li>The head element contains information about the webpage.</li>
         </ul>
         </section>
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li> Enter CSS notes here</li>
+          <li>CSS is a programming language used to define how content is displayed to users on a webpage.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside the element.</li>
+          <li>External CSS Style Sheets are the most common way to style a webpage.</li>
         </ul>
         </section>
       <section class="card" id="git-section">
@@ -32,7 +36,7 @@
         <ul>
           <li>git status: checks the current branch we are currently working on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li> git clone [url]: clones an entire repository from a hosted location</li>
+          <li>git clone [url]: clones an entire repository from a hosted location</li>
         </ul>
         </section>
       <section class="card" id="javascript-section">
