Added functions to .js file, debugged .js, and corrected issues

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -43,7 +43,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter Javascript notes here</li>
+          <li>JavaScript takes a static HTML/CSS webpage and makes it interactive.</li>
+          <li>'For' loops include the keyword 'for', a three-part conditional statement, and then a code block.</li>
+          <li> .JS files are executed linearly from top to bottom, so the order in which you enter code is extremely important.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li> Control flow is the order in which a computer executes code in a script.</li>
         </ul>
         </section>
     </main>
